<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">跬步</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addTimingHabit">Timing</string>
    <string name="deleteHabit">Delete</string>
    <string name="title_activity_create_habit">New Habit</string>
    <string name="title_activity_modify_habit">Modify Habit</string>
    <string name="delProject">Del</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hours_time">Hour(s)</string>
    <string name="minites_time">Minite(s)</string>
    <string name="habit_name">Habit Name</string>
    <string name="time_spent_per_day">Time spent per day</string>
    <string name="select_days_of_week">Select days of week</string>
    <string name="Monday">1</string>
    <string name="Tuesday">2</string>
    <string name="Wednesday">3</string>
    <string name="Thursday">4</string>
    <string name="Friday">5</string>
    <string name="Saturday">6</string>
    <string name="Sunday">7</string>
    <string name="blank_text"></string>
    <string name="set_start_date">Touch to Set Start Date</string>
    <string name="set_end_date">Touch to Set End Date</string>
    <string name="index_1">1. </string>
    <string name="index_2">2. </string>
    <string name="index_3">3. </string>
    <string name="index_4">4. </string>
    <string name="index_5">5. </string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_create">Create</string>
    <string name="habit_list_goto">></string>
    <string name="habit_list_percent">100%</string>
    <string name="executed_days">[days]</string>
    <string name="unfinished_time">unfinished_time</string>
    <string name="title_activity_execute_habit">Habit Detail</string>
    <string name="modifyHabit">Modify</string>
    <string name="noData">No habit found, please add a new one.</string>

    <!-- execute project strings -->
    <string name="inital_time">00:00:00</string>
    <string name="startTiming">Start</string>
    <string name="save">Save</string>
    <string name="clearTiming">Clear</string>
    <string name="inputManually">Input</string>
    <string name="colon">:</string>
    <string name="input_time">Please Input Time</string>
    <string name="hint_hours">(hours)</string>
    <string name="hint_minute">(minutes)</string>
    <string name="hint_second">(seconds)</string>
    <string name="execute_error_msg">Time is too short to be saved.</string>
    <string name="execute_error_msg_title">Error</string>
    <string name="execute_error_msg_minute">Invalid Minutes</string>
    <string name="execute_error_msg_time">Please enter valid minutes/second.</string>
    <string name="execute_record_saved">Record Saved!</string>
    <string name="execute_error_msg_success"></string>
    <string name="execute_warning">Warning</string>
    <string name="execute_warning_msg">Do you want to delete this habit?</string>
    <string name="execute_warning_save">Please save the current record before you modify the habit.</string>
    <string name="Total_Finished_Time">Total Finished Time</string>
    <string name="Total_Passed_Days">Total Passed Days</string>
    <string name="today_Finished_Time">Today Finished Time</string>
    <string name="paused">PAUSED</string>
    <string name="started">STARTED</string>
    <string name="about">About</string>
    <string name="about_msg">Habit Version 1.0</string>
    <string name="backup_set_dir">Set Sync Directory</string>
    <string name="backup_description">        Tips: \n
        1. Set sync directory to your network hardisk\'s auto-sync directory so that your data can be auto-synced to the server.\n
        2. After you set a valid sync directory, Habit will export data to this directory automatically every time you save a habit record.\n
        3. You can also click "Export data now" button to export data immediately.\n
        4. When you want to restore data, set the "Sync Directory" to the directory which contains the data, and click "import Data Now". 	</string>
    <string name="backup_export_data">Export Data Now</string>
    <string name="backup_import_data">Import Data Now</string>
    <string name="title_activity_sync">Sync</string>
    <string name="backup_save">Save</string>
    <string name="backup_sync_finish">Sync Complete</string>
    <string name="backup_sync_warning">Please set a valid directory</string>
    <string name="backup_sync_nofile">Can not find database file.</string>
    <string name="backup_chose_file">Choose</string>
	<string name="backup_sync_exportOK">Export Finished</string>
    <string name="backup_sync_importOK">Import Finished</string>
    <string name="backup_chose_file_readErr">Could not read folder contents.</string>

    <!-- count habit -->
    <string name="title_activity_create_count_habit">Create Count Habit</string>
    <string name="title_habit_times_per_day">Times Per Day</string>
    <string name="addCountHabit">Check</string>
    <string name="warning_times_per_day">Times Per Day should be a positive number.</string>
    <string name="title_activity_execute_count_habit">ExecuteCountHabitActivity</string>
    <string name="count_habit_today">today</string>
    <string name="count_habit_total">total</string>
    <string name="uncheck">Un-Check</string>
    <string name="check">Check</string>
    <string name="inital_check">0/0</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>