<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/text_create_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_create_project_start_date"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSetStartDate"
        android:text="@string/set_start_date" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_create_project_end_date"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSetEndDate"
        android:text="@string/set_end_date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_spent_per_day"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	
	    <EditText
	        android:id="@+id/text_create_project_hours"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="number" >
	
	    </EditText>
	
	    <TextView
	        android:id="@+id/text_create_project_hours_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hours_time"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <EditText
	        android:id="@+id/text_create_project_minutues"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="number" />
	
	    <TextView
	        android:id="@+id/text_create_project_minutes_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/minites_time"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_days_of_week"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/layout_create_project_week1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

         <CheckBox
	        android:id="@+id/checkBox_create_project1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Monday" />

	    <CheckBox
	        android:id="@+id/checkBox_create_project2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Tuesday" />
	
	    <CheckBox
	        android:id="@+id/checkBox_create_project3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Wednesday" />

        <CheckBox
		        android:id="@+id/checkBox_create_project4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/Thursday" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_create_project_week2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBox_create_project5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday" />

        <CheckBox
            android:id="@+id/checkBox_create_project6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday" />

        <CheckBox
            android:id="@+id/checkBox_create_project7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday" />

    </LinearLayout>

    <Button
        android:id="@+id/button_create_project_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSaveProject"
        android:text="@string/done" />

</TableLayout>