<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/AddTimingHabitMenu"
        android:title="@string/addTimingHabit" 
        android:onClick="onOptionAddTimingHabit" 
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/AddCountHabitMenu"
        android:title="@string/addCountHabit" 
        android:onClick="onOptionAddCountHabit" 
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/syncMenu"
        android:title="@string/title_activity_sync" 
        android:onClick="onSync" 
        android:showAsAction="ifRoom|withText"/>
     <item
        android:id="@+id/aboutMenu"
        android:title="@string/about" 
        android:onClick="onAbout" 
        android:showAsAction="ifRoom|withText"/>
</menu>
