<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

	<TextView
        android:id="@+id/textView_countHabit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/text_countHabit_create_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_countHabit_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button__countHabit_create_project_start_date"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:onClick="onSetStartDate"
        android:text="@string/set_start_date" />

    <TextView
        android:id="@+id/textView_countHabit_endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button__countHabit_create_project_end_date"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:onClick="onSetEndDate"
        android:text="@string/set_end_date" />
    
	<TextView
        android:id="@+id/textView_countHabit_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_habit_times_per_day"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/text_countHabit_timesPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10" >
    </EditText>
    
	<LinearLayout
        android:id="@+id/placeHolderLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/layout_create_count_habit_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/button_create_count_habit_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="onCancelProject"
            android:background="@color/blue"
            android:text="@string/cancel" />
        
        <Button
            android:id="@+id/button_create_count_habit_done"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="onSaveProject"
            android:background="@color/green"
            android:text="@string/done" />

    </LinearLayout>

</TableLayout>
