<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

	<TextView
	    android:id="@+id/execute_count_habit_progress"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/count_habit_total"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<TextView
	    android:id="@+id/execute_count_habit_today"
	    android:layout_marginBottom="10dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/count_habit_today"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<LinearLayout
	    android:id="@+id/placeHolderCountLayout"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >
        
		<TextView
	        android:id="@+id/execute_count_habit_textView_today"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="top|center"
	        android:paddingBottom="10dp"
	        android:text="@string/inital_check"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="100sp" />
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/button_execute_count_check"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:onClick="onCheckClicked"
            android:text="@string/check" />
        
		<Button
		    android:id="@+id/button_execute_count_uncheck"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@color/yellow"
		    android:onClick="onUnCheckClicked"
		    android:text="@string/uncheck" />

    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
        <Button
            android:id="@+id/button_execute_count_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:onClick="onOKClicked"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>
