<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:id="@+id/input_time_dialog"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/input_time_editText_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_hours"
        android:layout_weight="3"
        android:inputType="number" />

    <TextView
        android:id="@+id/input_time_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_time_editText_minitue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/hint_minute"
        android:inputType="number" />
    
    <TextView
        android:id="@+id/input_time_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_time_editText_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/hint_second"
        android:inputType="number" />

</LinearLayout>
